# vitalynk-cil

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: ccs.yaml  ccs_tiers.yaml  cip_policies.yaml  clinical_endpoints.yaml  cqs.yaml  default.yaml  labeling.yaml
docs/: data-platform.md  scoring.md
scripts/: demo_telemetry.py
src/cil/: __init__.py  __main__.py  config.py  logging.py  main.py  timeutil.py
src/cil/api/: __init__.py  app.py  metrics.py  routes.py
src/cil/audit/: __init__.py  bus.py  events.py  labeler.py  pipeline.py  synthetic.py  window_capture.py
src/cil/decision/: __init__.py
src/cil/policy/: __init__.py  context.py  engine.py  loader.py  models.py  service.py
src/cil/recovery/: __init__.py
tests/: conftest.py  test_app_acceptance.py  test_app_clinical.py  test_app_monitor.py  test_app_monitor_producer.py  test_app_store.py  test_app_telemetry.py  test_bus.py  test_ccs.py  test_clinical_endpoints.py  test_collector.py  test_config.py  test_cqs.py  test_data_platform_app.py  test_ericsson_adapter.py  test_events_store.py  test_export.py  test_health.py  test_labeler.py  test_normalize.py  test_pipeline.py  test_policy_app.py  test_policy_engine.py  test_policy_loader.py  test_policy_service.py  test_probes.py  test_range_retention.py  test_retention.py  test_scores_audit_store.py  test_scoring_service.py  test_simulator.py  test_storage.py  test_synthetic.py  test_telemetry_schema.py  test_time.py  test_training_store.py  test_window_capture.py
(+27 files in other folders)
